cabal-version: 2.4

name:           hbgen
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/JohnsonLee-debug/hbgen#readme>
homepage:       https://github.com/JohnsonLee-debug/hbgen#readme
bug-reports:    https://github.com/JohnsonLee-debug/hbgen/issues
author:         JohnsonLee
maintainer:     0xjohnsonlee@gmail.com
copyright:      Copyright (c) JohnsonLee
license:        BSD-3-Clause
license-file:   LICENSE
extra-doc-files:
    README.md
    Sample.hm

common common-settings
  ghc-options:
    -Wall

library
  exposed-modules:
      HBGen
        HBGen.Convert
        HBGen.Html
          HBGen.Html.Internal
        HBGen.Markup
        HBGen.Parser
  hs-source-dirs:
      src
  build-depends:
      base,
      directory
  default-language: Haskell2010

executable hbgen-exe
  main-is: Main.hs
  other-modules:
      Paths_hbgen
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hbgen
  default-language: Haskell2010
